--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -1,5 +1,14 @@
 - if current_user.blank?
-  = link_to "Login", new_user_session_path
+  %section.loginwrap.mdl-color--light-blue-900
+    .loginBlog.loginNew
+      %center.BlnkTxt.p-t-10
+      .formInfo.z-depth-1
+        .LoginLogoLink
+          = image_tag("hobnob-login-logo-img.png")
+        .row.m-t-30.mdl-typography--text-center
+          .mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.btnsubmit.ml-color--shades-white
+            .mdl-cell--12-col.mdl-cell--12-col-tablet
+              = link_to "Login", new_user_session_path
 - else
   !!!
   %html{:lang => "en"}
@@ -13,35 +22,6 @@
       %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"}
       %script{:src => "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"}
     %body
-      .container
-        #myCarousel.carousel.slide{"data-ride" => "carousel"}
-          / Indicators
-          %ol.carousel-indicators
-            %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
-            %li{"data-slide-to" => "1", "data-target" => "#myCarousel"}
-            %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
-          / Wrapper for slides
-          .carousel-inner
-            .item.active
-              %img{:alt => "Los Angeles", :src => "/assets/Dentalslide1.jpg", :style => "width:100%;"}/
-              .carousel-caption
-                %p Smile, it lets your teeth breathe.
-            .item
-              %img{:alt => "Chicago", :src => "/assets/dental-lab-970x304.jpg", :style => "width:100%;"}/
-              .carousel-caption
-                %p A good dentist never gets on your nerves.
-            .item
-              %img{:alt => "New York", :src => "/assets/dental.jpg", :style => "width:100%;"}/
-              .carousel-caption
-                %p Life is short. Smile while you still have teeth.
-          / Left and right controls
-          %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel"}
-            %span.glyphicon.glyphicon-chevron-left
-            %span.sr-only Previous
-          %a.right.carousel-control{"data-slide" => "next", :href => "#myCarousel"}
-            %span.glyphicon.glyphicon-chevron-right
-            %span.sr-only Next
-      / Container (About Section)
       .container-fluid
         .row
           .col-sm-8
