--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,36 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
+<nav class="navbar navbar-default navbar-collapse-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <img src="/assets/like.png" >
+      <strong class="text-success"><%= link_to "Can", homes_path , :class => "btn btn-success" %></strong>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to 'HOME', homes_path %></li>
+          <li><%= link_to 'Gallery', images_path %></li>
+          <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
+        <% end %>        
+      </ul>
+    </div>
+  </div>
+</nav>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
-   <p class="notice"><%= notice %></p>
-   <p class="alert"><%= alert %></p>
 
+</body>
+</html>
 
 </body>
 </html>
